--- a/index.html
+++ b/index.html
@@ -1,22 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Page 1</title>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+    <script src="scripts/script.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
-
-    <script type="text/javascript" src="scripts/scripts.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-    <title>RubberDuck inc. co.</title>
+    <link rel="stylesheet" type="text/css" href="styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
   </head>
   <body>
 
-    <img src="images/images_1.jpg">
-    <img src="images/images_2.jpg">
+
+    <div class="main">
+      <div id="page1" class='page1 page'><a name="1"></a>
+        <div class='content'>
+
+          HOME IMAGE
+
+        </div>
+      </div>
+      <div id="page2" class="page2 page"><a name="2"></a> 
+        <div class='content'>
+
+
+          DO YOUR STUFF HERE
+
+         
+        </div>
+      </div>
+
+    </div>
 
   </body>
 </html>
