needed to commit before pull

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
 
     <script type="text/javascript" src="scripts/scripts.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -14,6 +14,20 @@
     <title>RubberDuck inc. co.</title>
   </head>
   <body>
+
+    <!-- NAV BAR -->
+    <div class="container">
+
+      <nav>
+        <ul>
+          <li><a href="index.html">home</a></li>
+          <li><a href="work.html">work</a></li>
+          <li><a href="events.html">events</a></li>
+          <li><a href="about.html">about</a></li>
+        </ul>
+      </nav>
+
+    </div>
 
     <img src="images/images_1.jpg">
     <img src="images/images_2.jpg">
