added fonts + colors to index.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 
     <script src="scripts/script.js"></script>
 
-<<<<<<< HEAD
+    <link rel="stylesheet" type="text/css" href="styles/reset.css">
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Patrick+Hand+SC|Permanent+Marker|Roboto" rel="stylesheet">
 
     <script type="text/javascript" src="scripts/scripts.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -16,34 +17,33 @@
   </head>
   <body>
 
+    <!-- LOGO -->
+
+    <div class="logo">
+      <a href="/" class="logo-link">rubber duck</a>
+    </div>
+
     <!-- NAV BAR -->
-    <div class="container">
 
       <nav>
         <ul>
-          <li><a href="index.html">home</a></li>
-          <li><a href="work.html">work</a></li>
-          <li><a href="events.html">events</a></li>
-          <li><a href="about.html">about</a></li>
+          <li><a href="index.html" class="nav-button">home</a></li>
+          <li><a href="work.html" class="nav-button">work</a></li>
+          <li><a href="events.html" class="nav-button">events</a></li>
+          <li><a href="about.html" class="nav-button">about</a></li>
         </ul>
       </nav>
 
-    </div>
-
-    <img src="images/images_1.jpg">
-    <img src="images/images_2.jpg">
-=======
-    <link rel="stylesheet" type="text/css" href="styles/reset.css">
-    <link rel="stylesheet" type="text/css" href="styles/styles.css">
-  </head>
-  <body>
 
 
     <div class="main">
       <div id="page1" class='page1 page'><a name="1"></a>
         <div class='content'>
 
-          HOME IMAGE
+          <div class="tagline">
+            <h1>Let's start debugging!</h1>
+          </div>
+          
 
         </div>
       </div>
@@ -52,13 +52,15 @@
 
 
           DO YOUR STUFF HERE
+   <img src="images/images_1.jpg">
+    <img src="images/images_2.jpg">
 
          
         </div>
       </div>
 
     </div>
->>>>>>> fb62e3b60ea8c03a898ab62d79a2596a39247729
+
 
   </body>
 </html>
