added quote + picture to page2

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Page 1</title>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 
+    <!-- ANIMATIE (is dit nodig?) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
     <script src="scripts/script.js"></script>
 
     <link rel="stylesheet" type="text/css" href="styles/reset.css">
@@ -50,10 +53,14 @@
       <div id="page2" class="page2 page"><a name="2"></a> 
         <div class='content'>
 
+        <div class="quotes">
 
-          DO YOUR STUFF HERE
-   <img src="images/images_1.jpg">
-    <img src="images/images_2.jpg">
+            <h3>Real skills. Real opportunities.</h3>
+            <p>"I found NYCDA when I was finally ready to transition from bartending to a day job. The technical knowledge I gained in this program was the perfect complement to my prior skills, and opened the doors to a career I couldn’t have even imagined 12 weeks prior."</p><br><span>Bridget McMillan<br>February 2016 Cohort<br> GraduateWeb Development Intensive</span>
+
+        </div>
+
+         <img src="images/julia.jpg" alt="Julia" class="julia">
 
          
         </div>
