Who are we page

--- a/what_we_do.html
+++ b/what_we_do.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Page 1</title>
+    <title>What do we do?</title>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 
     <script src="scripts/script.js"></script>
 
     <link rel="stylesheet" type="text/css" href="styles/reset.css">
-    <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles/styles_what.css">
   </head>
   <body>
 
+    <!-- HTML for the bars -->
+    <div id="bar-left" class="bar"></div>
+    <div id="bar-right" class="bar"></div>
+    <div id="bar-down" class="bar"></div>
+    <!-- HTML for the bars -->
 
     <div class="main">
-      <div id="page1" class='page1 page'><a name="1"></a>
-        <div class='content'>
+      <div id="page1" class="page1 page"><a name="1"></a>
+        <div class="content">
 
-          HOME IMAGE
+
+          <img src="images/rubber-duck-debugging.jpg" alt="Debugging using THE duck!">
+
+      
 
         </div>
       </div>
       <div id="page2" class="page2 page"><a name="2"></a> 
-        <div class='content'>
+        <div class="content">
 
 
           DO YOUR STUFF HERE
