commit before push

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 
     <!-- ANIMATIE (is dit nodig?) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
     <script src="scripts/script.js"></script>
+
+    <!-- ANIMATION -->
+    <script src="scripts/animation.js"></script>
 
     <link rel="stylesheet" type="text/css" href="styles/reset.css">
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
