I need to commit :(

--- a/what_we_do.html
+++ b/what_we_do.html
@@ -14,7 +14,7 @@
     <!-- HTML for the bars -->
     <div id="bar-left" class="bar"></div>
     <div id="bar-right" class="bar"></div>
-    <div id="bar-down" class="bar"></div>
+    <div id="bar-bottom" class="bar"></div>
     <!-- HTML for the bars -->
 
     <div class="main">
@@ -22,16 +22,17 @@
         <div class="content">
 
 
-          <img src="images/rubber-duck-debugging.jpg" alt="Debugging using THE duck!">
+          <div id="duck-image"></div>
+  
+<!--           <img src="images/rubber-duck-debugging_2.jpg" id="image-title-what" alt="Debugging using THE duck!"> -->
 
-      
 
         </div>
       </div>
       <div id="page2" class="page2 page"><a name="2"></a> 
-        <div class="content">
+        <div class="content2">
 
-
+aas
           DO YOUR STUFF HERE
 
          
