renamed what_we_do to work. Renamed html and css file

--- a/work.html
+++ b/work.html
@@ -7,7 +7,8 @@
     <script src="scripts/script.js"></script>
 
     <link rel="stylesheet" type="text/css" href="styles/reset.css">
-    <link rel="stylesheet" type="text/css" href="styles/styles_what.css">
+    <link rel="stylesheet" type="text/css" href="styles/styles_work.css">
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
   </head>
   <body>
 
@@ -16,6 +17,26 @@
     <div id="bar-right" class="bar"></div>
     <div id="bar-bottom" class="bar"></div>
     <!-- HTML for the bars -->
+
+
+
+    <!-- LOGO -->
+
+    <div class="logo">
+      <a href="/" class="logo-link">rubber duck</a>
+    </div>
+
+    <!-- NAV BAR -->
+
+      <nav>
+        <ul>
+          <li><a href="index.html" class="nav-button">home</a></li>
+          <li><a href="work.html" class="nav-button">work</a></li>
+          <li><a href="events.html" class="nav-button">events</a></li>
+          <li><a href="about.html" class="nav-button">about</a></li>
+        </ul>
+      </nav>
+
 
     <div class="main">
       <div id="page1" class="page1 page"><a name="1"></a>
