added work arrow-navigation, added responsive design for work page

--- a/work.html
+++ b/work.html
@@ -2,13 +2,16 @@
 <html lang="en">
   <head>
     <title>What do we do?</title>
+    <meta name="viewport" content="width=device-with, initial-scale=1">
+
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 
     <script src="scripts/script.js"></script>
+    <script src="scripts/work.js"></script>
 
     <link rel="stylesheet" type="text/css" href="styles/reset.css">
-    <link rel="stylesheet" type="text/css" href="styles/styles_work.css">
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles/styles_work.css">
   </head>
   <body>
 
@@ -16,37 +19,28 @@
     <div id="bar-left" class="bar"></div>
     <div id="bar-right" class="bar"></div>
     <div id="bar-bottom" class="bar"></div>
-    <!-- HTML for the bars -->
-
-
 
     <!-- LOGO -->
-
     <div class="logo">
-      <a href="/" class="logo-link">rubber duck</a>
+      <a href="index.html" class="logo-link">rubber duck</a>
     </div>
 
     <!-- NAV BAR -->
-
-      <nav>
-        <ul>
-          <li><a href="index.html" class="nav-button">home</a></li>
-          <li><a href="work.html" class="nav-button">work</a></li>
-          <li><a href="events.html" class="nav-button">events</a></li>
-          <li><a href="about.html" class="nav-button">about</a></li>
-        </ul>
-      </nav>
-
+    <nav>
+      <ul>
+        <li><a href="index.html" class="nav-button">home</a></li>
+        <li><a href="work.html" class="nav-button">work</a></li>
+        <li><a href="events.html" class="nav-button">events</a></li>
+        <li><a href="about.html" class="nav-button">about</a></li>
+      </ul>
+    </nav>
 
     <div class="main">
       <div id="page1" class="page1 page"><a name="1"></a>
         <div class="content">
 
-
-          <div id="duck-image"></div>
-  
-<!--           <img src="images/rubber-duck-debugging_2.jpg" id="image-title-what" alt="Debugging using THE duck!"> -->
-
+          <h1>Solving issues using THE DUCK!</h1>
+          <img src="images/rubber-duck-debugging_2.jpg" id="image-work" alt="Debugging using THE duck!">
 
         </div>
       </div>
