Make the side-screen-arrows work. Added comments in script.js and cleaned the code

--- a/work.html
+++ b/work.html
@@ -18,7 +18,7 @@
     <!-- HTML for the bars -->
     <div id="bar-left" class="bar"></div>
     <div id="bar-right" class="bar"></div>
-    <div id="bar-bottom" class="bar"></div>
+    <div id="bar-down" class="bar"></div>
 
     <!-- LOGO -->
     <div class="logo">
