Fixed JS-bug, incorrect function name for returnSize

--- a/about.html
+++ b/about.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" type="text/css" href="styles/about.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Patrick+Hand+SC|Permanent+Marker|Roboto" rel="stylesheet">
 
-    <script type="text/javascript" src="scripts/scripts.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     <title>RubberDuck inc. co.</title>
@@ -25,7 +24,7 @@
     <!-- HTML for the bars -->
     <div id="bar-left" class="bar"></div>
     <div id="bar-right" class="bar"></div>
-    <div id="bar-bottom" class="bar"></div>
+    <div id="bar-down" class="bar"></div>
     <!-- HTML for the bars -->
 
     <!-- LOGO -->
