--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="styles/about.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Patrick+Hand+SC|Permanent+Marker|Roboto" rel="stylesheet">
 
+    <script type="text/javascript" src="scripts/scripts.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     <title>RubberDuck inc. co.</title>
