made changes in the navbar order and added quotes to page2 from index.html

--- a/index.html
+++ b/index.html
@@ -15,12 +15,17 @@
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Patrick+Hand+SC|Permanent+Marker|Roboto" rel="stylesheet">
 
-    <script type="text/javascript" src="scripts/scripts.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     <title>RubberDuck inc. co.</title>
   </head>
   <body>
+
+    <!--  ARROWS -->
+
+    <div id="bar-left" class="bar"></div>
+    <div id="bar-right" class="bar"></div>
+    <div id="bar-down" class="bar"></div>
 
     <!-- LOGO -->
 
@@ -32,10 +37,10 @@
 
       <nav>
         <ul>
-          <li><a href="index.html" class="nav-button">home</a></li>
-          <li><a href="work.html" class="nav-button">work</a></li>
-          <li><a href="events.html" class="nav-button">events</a></li>
           <li><a href="about.html" class="nav-button">about</a></li>
+          <li><a href="events.html" class="nav-button">events</a></li>
+          <li><a href="work.html" class="nav-button">work</a></li>
+          <li><a href="index.html" class="nav-button">home</a></li>
         </ul>
       </nav>
 
@@ -55,14 +60,34 @@
       <div id="page2" class="page2 page"><a name="2"></a> 
         <div class='content'>
 
-        <div class="quotes">
+        <div class="title1">
+          <h1>All the tools you need to debug your way to victory</h1>
+        </div>  
 
-            <h3>Real skills. Real opportunities.</h3>
-            <p>"I found NYCDA when I was finally ready to transition from bartending to a day job. The technical knowledge I gained in this program was the perfect complement to my prior skills, and opened the doors to a career I couldn’t have even imagined 12 weeks prior."</p><br><span>Bridget McMillan<br>February 2016 Cohort<br> GraduateWeb Development Intensive</span>
+        <div class="quote1">
+
+          <h3>Real skills. Real solutions.</h3>
+          <p>"I found Rubber Duck when I was finally ready to transition from bartending to a day job. The technical knowledge I gained in this program was the perfect complement to my prior skills, and opened the doors to a career I couldn't have even imagined 12 weeks prior."</p><br><span>Bridget McMillan<br>February 2016 Cohort Graduate<br>Web Development Intensive</span>
 
         </div>
 
          <img src="images/julia.jpg" alt="Julia" class="julia">
+
+        <div class="title2">
+          <h1>Our clients say:</h1>
+        </div>  
+
+        <div class="quote2">
+
+          <p>"We at Uncubed couldn't feel more lucky that we showed up to Rubber Duck's demo day and ultimately met a future team member in Anh LaRusso. She was a standout to our team and we quickly made her an offer to join Uncubed."</p><br><span>Tarek Pertew<br>Chief Creative Officer, Uncubed</span>
+
+        </div>
+
+        <div class="quote3">
+
+          <p>"In the past 6 months Xaxis has employed three Rubber Duck graduates to assist with our website re-design. All three graduates have shown a tremendous range of skills and an invaluable ability to adapt to any project they are assigned."</p><br><span>Kyle Grappone<br>Marketing Operations Specialist, Xaxis</span>
+
+        </div>
 
          
         </div>
