Made index.html more responsive

--- a/index.html
+++ b/index.html
@@ -64,31 +64,33 @@
           <h1>All the tools you need to debug your way to victory</h1>
         </div>  
 
-        <div class="quote1">
+        <div class="clear"></div>
 
-          <h3>Real skills. Real solutions.</h3>
-          <p>"I found Rubber Duck when I was finally ready to transition from bartending to a day job. The technical knowledge I gained in this program was the perfect complement to my prior skills, and opened the doors to a career I couldn't have even imagined 12 weeks prior."</p><br><span>Bridget McMillan<br>February 2016 Cohort Graduate<br>Web Development Intensive</span>
-
+        <div class="row1">
+          <div class="quote1">
+            <h3>Real skills. Real solutions.</h3>
+            <p>"I found Rubber Duck when I was finally ready to transition from bartending to a day job. The technical knowledge I gained in this program was the perfect complement to my prior skills, and opened the doors to a career I couldn't have even imagined 12 weeks prior."</p><br><span>Bridget McMillan<br>February 2016 Cohort Graduate<br>Web Development Intensive</span>
+          </div>
+          <img src="images/julia.jpg" alt="Julia" class="julia">
         </div>
 
-         <img src="images/julia.jpg" alt="Julia" class="julia">
+        <div class="clear"></div>
 
         <div class="title2">
           <h1>Our clients say:</h1>
         </div>  
 
-        <div class="quote2">
+        <div class="clear"></div>
 
-          <p>"We at Uncubed couldn't feel more lucky that we showed up to Rubber Duck's demo day and ultimately met a future team member in Anh LaRusso. She was a standout to our team and we quickly made her an offer to join Uncubed."</p><br><span>Tarek Pertew<br>Chief Creative Officer, Uncubed</span>
+        <div class="row2">
+          <div class="quote2">
+            <p>"We at Uncubed couldn't feel more lucky that we showed up to Rubber Duck's demo day and ultimately met a future team member in Anh LaRusso. She was a standout to our team and we quickly made her an offer to join Uncubed."</p><br><span>Tarek Pertew<br>Chief Creative Officer, Uncubed</span>
+          </div>
 
+          <div class="quote3">
+            <p>"In the past 6 months Xaxis has employed three Rubber Duck graduates to assist with our website re-design. All three graduates have shown a tremendous range of skills and an invaluable ability to adapt to any project they are assigned."</p><br><span>Kyle Grappone<br>Marketing Operations Specialist, Xaxis</span>
+          </div>
         </div>
-
-        <div class="quote3">
-
-          <p>"In the past 6 months Xaxis has employed three Rubber Duck graduates to assist with our website re-design. All three graduates have shown a tremendous range of skills and an invaluable ability to adapt to any project they are assigned."</p><br><span>Kyle Grappone<br>Marketing Operations Specialist, Xaxis</span>
-
-        </div>
-
          
         </div>
       </div>
