--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Patrick+Hand+SC|Permanent+Marker|Roboto" rel="stylesheet">
 
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
     <title>RubberDuck inc. co.</title>
   </head>
   <body>
@@ -30,7 +28,7 @@
     <!-- LOGO -->
 
     <div class="logo">
-      <a href="/" class="logo-link">rubber duck</a>
+      <a href="index.html" class="logo-link">rubber duck</a>
     </div>
 
     <!-- NAV BAR -->
