--- a/work.html
+++ b/work.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Rubber Duck > How we work?</title>
+    <title>What do we do?</title>
     <meta name="viewport" content="width=device-with, initial-scale=1">
 
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
@@ -9,7 +9,7 @@
     <script src="scripts/script.js"></script>
 
     <link rel="stylesheet" type="text/css" href="styles/reset.css">
-    <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles/styles_extra.css">
     <link rel="stylesheet" type="text/css" href="styles/styles_work.css">
   </head>
   <body>
@@ -27,10 +27,10 @@
     <!-- NAV BAR -->
     <nav>
       <ul>
-          <li><a href="about.html" class="nav-button">about</a></li>
-          <li><a href="events.html" class="nav-button">events</a></li>
-          <li><a href="work.html" class="nav-button">work</a></li>
-          <li><a href="index.html" class="nav-button">home</a></li>
+        <li><a href="index.html" class="nav-button">home</a></li>
+        <li><a href="work.html" class="nav-button">work</a></li>
+        <li><a href="events.html" class="nav-button">events</a></li>
+        <li><a href="about.html" class="nav-button">about</a></li>
       </ul>
     </nav>
 
