--- a/events.html
+++ b/events.html
@@ -33,7 +33,7 @@
     <!-- LOGO -->
 
     <div class="logo">
-      <a href="/" class="logo-link">rubber duck</a>
+      <a href="index.html" class="logo-link">rubber duck</a>
     </div>
 
     <!-- NAV BAR -->
